Bug 316630 - Attach file suggestion does not vanish after adding an attachment with dnd
Summary: Attach file suggestion does not vanish after adding an attachment with dnd
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.10.1
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-13 00:18 UTC by Wolf Behrenhoff
Modified: 2013-03-13 06:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.2
Sentry Crash Report:


Attachments
Screenshot demonstrating the bug (85.07 KB, image/png)
2013-03-13 00:23 UTC, Wolf Behrenhoff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wolf Behrenhoff 2013-03-13 00:18:52 UTC
When writing a mail containing the word "attachment", KMail suggests me to attach a file. When adding a file as attachment via drag + drop, the message does not disappear.

Reproducible: Always

Steps to Reproduce:
1. Write a mail containing the word "attachment"
2. Attach a file using drag + drop

The hint that you might want to attach a file does NOT disappear. When going via the main menu Attach->Attach->Attach File, the hint correctly disappears.
Comment 1 Wolf Behrenhoff 2013-03-13 00:23:03 UTC
Created attachment 78000 [details]
Screenshot demonstrating the bug
Comment 2 Laurent Montel 2013-03-13 06:33:38 UTC
I confirm.
Will fix soon :)
thanks
Comment 3 Laurent Montel 2013-03-13 06:44:30 UTC
Git commit cfaa23c4b74c3d99ff55ece09f5920f4cb7273b1 by Montel Laurent.
Committed on 13/03/2013 at 07:43.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 316630 - Attach file suggestion does not vanish after adding an attachment with dnd

FIXED-IN: 4.10.2

M  +1    -0    messagecomposer/attachmentcontrollerbase.cpp

http://commits.kde.org/kdepim/cfaa23c4b74c3d99ff55ece09f5920f4cb7273b1