Fix Bug 316630 - Attach file suggestion does not vanish after adding an attachment with dnd

FIXED-IN: 4.10.2
BUG: 316630