messagecomposer/attachmentcontrollerbase.cpp
@@ -810,6 +810,7 @@ void AttachmentControllerBase::addAttachment( AttachmentPart::Ptr part )
   if( MessageComposer::MessageComposerSettings::self()->showMessagePartDialogOnAttach() ) {
     attachmentProperties( part );
   }
+  emit fileAttached();
 }
 
 MessageCore::AttachmentFromUrlBaseJob * AttachmentControllerBase::createAttachmentJob(const KUrl &url)
